feat: enable cors to allow testing through swagger online editor
